--- a/styles/style.css
+++ b/styles/style.css
@@ -377,6 +377,7 @@ p.error.active {
     font-size: 1.1rem;
     font-weight: 700;
     border-radius: 8px;
+    transition: all 1000ms ease;
 }
 
 .copyButton.active {
